--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </style>
 </head>
 <body>
-    <img id="check" src="" alt="">
+    <img id=check" src="" alt="">
 
     <script>
         function getParameterByName(name) {
@@ -39,4 +39,5 @@
     </script>
 </body>
 </html>
+
 
